# qr_demo

./: Cargo.toml  index.html
src/: lib.rs  test.rs
