[package]
name = "qr_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
encoding = "0.2.33"
itertools = "0.10.5"
js-sys = "0.3.61"
log = "0.4.19"
reed-solomon = "0.2.1"
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib", "rlib"]
